# omniscribe

./: .gitignore  README.md  architecture_documentation.md  main.py  prompt.txt  promptfoo_provider.py  promptfooconfig.yaml  pyproject.toml  seed_db.py  utils.py
static/: index.html
