[project]
name = "omniscribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.136.3",
    "openai>=2.38.0",
    "pgvector>=0.4.2",
    "psycopg[binary,pool]>=3.1.18",
    "arize-phoenix>=4.3.0",
    "openinference-instrumentation-openai>=0.1.0",
    "opentelemetry-api>=1.20.0",
]
